# security-advisories

./: .gitignore  CONTRIBUTING.md  EXAMPLE_ADVISORY.md  LICENSE.txt  PROCESS.md  README.md  atom.xml  by-dates.html  by-packages.html  cabal.project  flake.nix  index.html  shell.nix  snapshot.json
.github/: PULL_REQUEST_TEMPLATE.md  haskell-ci.patch
0001/: 0001.json
0002/: 0002.json
0003/: 0003.json
0004/: 0004.json
0005/: 0005.json
0006/: 0006.json
0007/: 0007.json
0008/: 0008.json
0009/: 0009.json
0010/: 0010.json
0011/: 0011.json
0012/: 0012.json
0013/: 0013.json
0014/: 0014.json
0015/: 0015.json
2023/: HSEC-2023-0001.json  HSEC-2023-0002.json  HSEC-2023-0003.json  HSEC-2023-0004.json  HSEC-2023-0005.json  HSEC-2023-0006.json  HSEC-2023-0007.json  HSEC-2023-0008.json  HSEC-2023-0009.json  HSEC-2023-0010.json  HSEC-2023-0011.json  HSEC-2023-0012.json  HSEC-2023-0013.json  HSEC-2023-0014.json  HSEC-2023-0015.json
2024/: HSEC-2024-0001.json  HSEC-2024-0002.json  HSEC-2024-0003.json  HSEC-2024-0004.json  HSEC-2024-0006.json  HSEC-2024-0007.json  HSEC-2024-0008.json  HSEC-2024-0009.json
2025/: HSEC-2025-0001.json  HSEC-2025-0002.json  HSEC-2025-0003.json  HSEC-2025-0004.json  HSEC-2025-0005.json  HSEC-2025-0006.json  HSEC-2025-0007.json
2026/: HSEC-2026-0002.json  HSEC-2026-0004.json  HSEC-2026-0006.json  HSEC-2026-0007.json  HSEC-2026-0008.json
advisory/: HSEC-2023-0001.html  HSEC-2023-0002.html  HSEC-2023-0003.html  HSEC-2023-0004.html  HSEC-2023-0005.html  HSEC-2023-0006.html  HSEC-2023-0007.html  HSEC-2023-0008.html  HSEC-2023-0009.html  HSEC-2023-0010.html  HSEC-2023-0011.html  HSEC-2023-0012.html  HSEC-2023-0013.html  HSEC-2023-0014.html  HSEC-2023-0015.html  HSEC-2024-0001.html  HSEC-2024-0002.html  HSEC-2024-0003.html  HSEC-2024-0004.html  HSEC-2024-0006.html  HSEC-2024-0007.html  HSEC-2024-0008.html  HSEC-2024-0009.html  HSEC-2025-0001.html  HSEC-2025-0002.html  HSEC-2025-0003.html  HSEC-2025-0004.html  HSEC-2025-0005.html  HSEC-2025-0006.html  HSEC-2025-0007.html  HSEC-2026-0002.html  HSEC-2026-0004.html  HSEC-2026-0006.html  HSEC-2026-0007.html  HSEC-2026-0008.html
code/: .envrc  LICENSE.txt  README.md  cabal.project
code/cabal-audit/: cabal-audit.cabal  fourmolu.yaml
code/cabal-audit/src/Distribution/: Audit.hs
code/cabal-audit/test/: Main.hs  Spec.hs
code/cvss/: CHANGELOG.md  README.md  cvss.cabal
code/cvss/docs/: CVSS40SpecificationRevision.md  ValidationReport.md
code/cvss/src/Security/: CVSS.hs  CVSS40Lookup.hs
code/cvss/src/Security/CVSS/: Internal.hs  Types.hs  V20.hs  V30.hs  V31.hs  V40.hs
code/cvss/src/Security/V4_0/: CVSS40Lookup.hs
code/cvss/test/: OfficialExamples.hs  Spec.hs
code/cvss/test/TestCVSS/: Common.hs  V20.hs  V30.hs  V31.hs  V40.hs
code/cwe/: CHANGELOG.md  RenderCsvData.hs  cwe.cabal
code/cwe/src/: CWE.hs
code/cwe/src/CWE/: Data.hs
code/cwe/src/Security/: CWE.hs
code/cwe/src/Security/CWE/: Data.hs
code/hsec-cabal/: hsec-cabal.cabal
code/hsec-cabal/app/: Main.hs
code/hsec-cabal/src/Distribution/: Audit.hs
code/hsec-cabal/src/Distribution/Audit/: Option.hs
code/hsec-cabal/src/Security/Advisories/: Cabal.hs
code/hsec-cabal/test/assets/test-a/: test-a.cabal
code/hsec-cabal/test/assets/test-cabal-project/: cabal.project  cabal.project.local  flake.nix
code/hsec-cabal/test/assets/test-cabal-project/test-a/: test-a.cabal
code/hsec-core/: CHANGELOG.md  README.md  hsec-core.cabal
code/hsec-core/src/Security/Advisories/Core/: Advisory.hs  HsecId.hs  OsvId.hs
code/hsec-core/test/: Spec.hs
code/hsec-core/test/Spec/: QueriesSpec.hs
code/hsec-sync/: .gitignore  CHANGELOG.md  README.md  hsec-sync.cabal
code/hsec-sync/app/: Main.hs
code/hsec-sync/src/Security/Advisories/: Sync.hs
code/hsec-sync/src/Security/Advisories/Sync/: Atom.hs  Git.hs  Snapshot.hs  Url.hs
code/hsec-sync/test/: Spec.hs
code/hsec-sync/test/Spec/: SyncSpec.hs
code/hsec-tools/: .envrc  CHANGELOG.md  README.md  cabal.project  cabal.project.freeze  flake.nix  hsec-tools.cabal  index.html
code/hsec-tools/app/: Main.hs  Util.hs
code/hsec-tools/app/Command/: NextID.hs  Reserve.hs
code/hsec-tools/assets/css/: default.css
code/hsec-tools/src/Security/: Advisories.hs  OSV.hs
code/hsec-tools/src/Security/Advisories/: Definition.hs  Filesystem.hs  Format.hs  Git.hs  HsecId.hs  Parse.hs  Queries.hs
code/hsec-tools/src/Security/Advisories/Convert/: OSV.hs
code/hsec-tools/src/Security/Advisories/Generate/: HTML.hs  Snapshot.hs  TH.hs
code/hsec-tools/test/: Spec.hs
code/hsec-tools/test/Spec/: FormatSpec.hs  OsvSpec.hs  QueriesSpec.hs
code/hsec-tools/test/golden/: EXAMPLE_ADVISORY.md.golden  EXAMPLE_ADVISORY_GHC.md  EXAMPLE_ADVISORY_GHC.md.golden  EXAMPLE_ADVISORY_HACKAGE.md  EXAMPLE_ADVISORY_HACKAGE.md.golden  EXAMPLE_ADVISORY_REPO.md  EXAMPLE_ADVISORY_REPO.md.golden  MISSING_AFFECTED.md  MISSING_AFFECTED.md.golden  MISSING_TITLE.md  MISSING_TITLE.md.golden
code/osv/: CHANGELOG.md  README.md  osv.cabal
code/osv/src/Security/: OSV.hs
code/osv/test/: Spec.hs
code/purl/: CHANGELOG.md  README.md  purl.cabal
code/purl/src/Data/: Purl.hs
code/purl/test/: Spec.hs
docs/: README.md  call-for-volunteers-example.md  membership.md  packages.md  reports.md
guides/: github.md  sbom_dependencies.md
meeting-notes/: 2023-05-03.md  2023-05-17.md  2023-05-31.md  2023-06-15.md  2023-06-28.md  2023-07-12.md  2023-07-26.md  2023-08-09.md  2023-08-23.md  2023-09-20.md  2023-10-04.md  2023-10-18.md  2023-11-01.md  2023-11-15.md  2023-11-29.md  2023-12-13.md  2024-01-10.md  2024-01-24.md  2024-02-07.md  2024-02-21.md  2024-03-06.md  2024-03-20.md  2024-04-03.md  2024-04-17.md  2024-05-01.md  2024-05-15.md  2024-05-29.md  2024-06-12.md  2024-06-26.md  2024-07-10.md  2024-07-24.md  2024-08-07.md  2024-08-21.md  2024-09-04.md  2024-10-02.md  2024-10-16.md  2024-10-30.md  2024-11-13.md  2024-11-27.md  2024-12-11.md  (+27 more)
reports/: 2023-07-10-ann-q2-report.md  2024-01-10-half-year-report.md  2024-04-08-Q1-report.md  2024-07-18-Q2-report.md  2024-11-14-Q3-report.md  2025-02-06-Q4-report.md  (+2 more)
(+120 files in other folders)
