cabal-version:      2.4
name:               cabal-audit
version:            1.0.0.0

-- A short (one-line) description of the package.
synopsis:           Checking a cabal project for security advisories

-- A longer description of the package.
description:
  Tools for querying the haskell security advisories database against cabal projects.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            BSD-3-Clause
author:             @MangoIV
maintainer:         contact@mangoiv.com

-- A copyright notice.
-- copyright:
category:           Data
extra-doc-files:
extra-source-files:
tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.3 || ==9.8.1

common common-all
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fmax-relevant-binds=0 -fno-show-valid-hole-fits

  if impl(ghc >=9.6.1)
    ghc-options: -fno-show-error-context

  default-extensions:
    BlockArguments
    DeriveGeneric
    DerivingStrategies
    EmptyCase
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    NoStarIsType
    OverloadedStrings
    PartialTypeSignatures
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications

library
  import:           common-all
  exposed-modules:
    Distribution.Audit
    Security.Advisories.Cabal

  build-depends:
    , base                  <5
    , Cabal
    , cabal-install
    , colourista
    , containers
    , filepath
    , hsec-core
    , hsec-tools
    , http-client
    , optparse-applicative
    , process
    , temporary
    , text
    , validation-selective

  hs-source-dirs:   src
  default-language: Haskell2010

executable cabal-audit
  import:           common-all
  hs-source-dirs:   app
  main-is:          Main.hs
  other-modules:
  build-depends:
    , base         <5
    , cabal-audit

  default-language: Haskell2010

test-suite spec
  import:           common-all
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:    Spec
  build-depends:
    , base         <5
    , cabal-audit
    , hspec

  default-language: Haskell2010
