cabal-version:   2.4
name:            cvss
version:         0.1
synopsis:        Common Vulnerability Scoring System.
description:
  Use this library to parse CVSS string and compute its score.

license:         BSD-3-Clause
author:          Tristan de Cacqueray
maintainer:      tdecacqu@redhat.com
category:        Data
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.3 || ==9.8.1

library
  exposed-modules:  Security.CVSS
  build-depends:
    , base  >=4.14 && <5
    , text  >=1.2  && <3

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    , base         <5
    , cvss
    , tasty        <1.5
    , tasty-hunit  <1.0
    , text

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
