cabal-version:   2.4
name:            cwe
version:         0.1
synopsis:        Common Weakness Enumaration database
description:     Use this library to lookup or validate CWE numbers.
license:         BSD-3-Clause
author:          Tristan de Cacqueray
maintainer:      tdecacqu@redhat.com
category:        Data
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==8.10.7 || ==9.0.2 || ==9.2.7 || ==9.4.5 || ==9.6.2

library
  exposed-modules:  Security.CWE
  other-modules:    Security.CWE.Data
  build-depends:
    , base        >=4.14 && <5
    , containers  >=0.6  && <0.7
    , text        >=1.2  && <3

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
