cabal-version:      2.4
name:               hsec-core
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Core package representing Haskell advisories

-- A longer description of the package.
description:        Core package representing Haskell advisories.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            BSD-3-Clause
author:             David Christiansen
maintainer:         david@davidchristiansen.dk

-- A copyright notice.
-- copyright:
category:           Data
extra-doc-files:    CHANGELOG.md

tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.3 || ==9.8.1

library
  exposed-modules:
    Security.Advisories.Core.Advisory
    Security.Advisories.Core.HsecId

  build-depends:
    , base          >=4.14    && <4.20
    , Cabal-syntax  >=3.8.1.0 && <3.11
    , cvss
    , osv
    , pandoc-types  >=1.22    && <2
    , safe          >=0.3
    , text          >=1.2     && <3
    , time          >=1.9     && <1.14

  -- , commonmark            ^>=0.2.2
  -- , commonmark-pandoc     >=0.2     && <0.3
  -- , containers            >=0.6     && <0.7
  -- , mtl                   >=2.2     && <2.4
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    , base         <5
    , cvss
    , hsec-core
    , tasty        <1.5
    , tasty-hunit  <0.11
    , text

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
