cabal-version:   2.4
name:            hsec-core
version:         0.5.0.0

-- A short (one-line) description of the package.
synopsis:        Core package representing Haskell advisories

-- A longer description of the package.
description:     Core package representing Haskell advisories.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:         BSD-3-Clause
author:          Haskell Security Response Team
maintainer:      security-advisories@haskell.org

-- A copyright notice.
-- copyright:
category:        Data
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==9.6.7
   || ==9.8.4
   || ==9.10.3
   || ==9.12.4
   || ==9.14.1

library
  exposed-modules:
    Security.Advisories.Core.Advisory
    Security.Advisories.Core.HsecId
    Security.Advisories.Core.OsvId

  build-depends:
    , base          >=4.14    && <5
    , Cabal-syntax  >=3.8.1.0 && <3.17
    , containers    >=0.6     && <0.9
    , cvss          >=0.2     && <0.4
    , network-uri   >=2.6.3.0 && <2.8
    , osv           >=0.1     && <0.3
    , pandoc-types  >=1.22    && <2
    , safe          >=0.3     && <0.4
    , text          >=1.2     && <3
    , time          >=1.9     && <1.17

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    Spec.QueriesSpec
  build-depends:
    , base
    , Cabal-syntax
    , cvss
    , hsec-core
    , tasty         <2
    , tasty-hunit   <0.11
    , text

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
