cabal-version:   2.4
name:            hsec-sync
version:         0.2.0.2

-- A short (one-line) description of the package.
synopsis:        Synchronize with the Haskell security advisory database

-- A longer description of the package.
description:     Synchronize with the Haskell security advisory database.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:         BSD-3-Clause
author:          Gautier DI FOLCO
maintainer:      gautier.difolco@gmail.com

-- A copyright notice.
-- copyright:
category:        Data
extra-doc-files: CHANGELOG.md, overview.png, recommended-workflow.png, README.md
tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.6 || ==9.8.3 || ==9.10.1 || ==9.12.1

library
  exposed-modules:  Security.Advisories.Sync
  other-modules:
    Security.Advisories.Sync.Snapshot
    Security.Advisories.Sync.Url

  build-depends:
    , aeson         >=2.0   && <3
    , base          >=4.14  && <5
    , bytestring    >=0.10  && <0.13
    , directory     >=1.3   && <1.4
    , either        >=5.0   && <5.1
    , extra         >=1.7   && <1.9
    , filepath      >=1.4   && <1.6
    , hsec-core     ^>=0.2
    , http-client   >=0.7.0 && <0.8
    , lens          >=5.1   && <5.4
    , tar           >=0.5   && <0.7
    , temporary     >=1     && <2
    , text          >=1.2   && <3
    , time          >=1.9   && <1.15
    , transformers  >=0.5   && <0.7
    , wreq          >=0.5   && <0.6
    , zlib          >=0.6   && <0.8

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

executable hsec-sync
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson                 >=2.0.1.0 && <3
    , base                  >=4.14    && <5
    , bytestring            >=0.10    && <0.13
    , filepath              >=1.4     && <1.6
    , hsec-sync
    , optparse-applicative  >=0.17    && <0.19
    , text                  >=1.2     && <3

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    Spec.SyncSpec
  build-depends:
    , base
    , directory
    , filepath
    , hsec-sync
    , tasty        <2
    , tasty-hunit  <0.11
    , temporary    >=1   && <2
    , text
    , time

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
