cabal-version:      2.4
name:               hsec-tools
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:
  Tools for working with the Haskell security advisory database

-- A longer description of the package.
description:
  Tools for working with the Haskell security advisory database.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            BSD-3-Clause
author:             David Christiansen
maintainer:         david@davidchristiansen.dk

-- A copyright notice.
-- copyright:
category:           Data
extra-doc-files:    CHANGELOG.md
extra-source-files:
  test/golden/*.golden
  test/golden/*.md

tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.3 || ==9.8.1

library
  exposed-modules:
    Security.Advisories
    Security.Advisories.Convert.OSV
    Security.Advisories.Filesystem
    Security.Advisories.Generate.HTML
    Security.Advisories.Git
    Security.Advisories.Parse
    Security.Advisories.Queries

  build-depends:
    , aeson                 >=2.0.1.0  && <3
    , base                  >=4.14     && <4.20
    , Cabal-syntax          >=3.8.1.0  && <3.11
    , commonmark            ^>=0.2.2
    , commonmark-pandoc     >=0.2      && <0.3
    , containers            >=0.6      && <0.7
    , cvss
    , directory             <2
    , extra                 ^>=1.7.5
    , filepath              >=1.4      && <1.5
    , hsec-core
    , feed                  ==1.3.*
    , lucid                 >=2.9.0
    , mtl                   >=2.2      && <2.4
    , osv
    , pandoc-types          >=1.22     && <2
    , parsec                >=3        && <4
    , pathwalk              >=0.3
    , process               >=1.6      && <1.7
    , safe                  >=0.3
    , text                  >=1.2      && <3
    , time                  >=1.9      && <1.14
    , toml-parser           ^>=2.0.0.0
    , validation-selective  >=0.1      && <1

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

executable hsec-tools
  main-is:          Main.hs
  other-modules:    Command.Reserve

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson                 >=2.0.1.0 && <3
    , base                  >=4.14    && <4.20
    , bytestring            >=0.10    && <0.13
    , Cabal-syntax          >=3.8.1.0 && <3.11
    , filepath              >=1.4     && <1.5
    , hsec-core
    , hsec-tools
    , optparse-applicative  >=0.17    && <0.19
    , text                  >=1.2     && <3
    , validation-selective  >=0.1     && <1

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    Spec.QueriesSpec
  build-depends:
    , aeson-pretty   <2
    , base           <5
    , Cabal-syntax
    , cvss
    , directory
    , hsec-core
    , hsec-tools
    , pretty-simple  <5
    , tasty          <1.5
    , tasty-golden   <2.4
    , tasty-hunit    <0.11
    , text
    , time

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
