cabal-version:      3.0
name:               hsec-tools
version:            0.3.0.0

-- A short (one-line) description of the package.
synopsis:
  Tools for working with the Haskell security advisory database

-- A longer description of the package.
description:
  Tools for working with the Haskell security advisory database.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            BSD-3-Clause
author:             Haskell Security Response Team
maintainer:         security-advisories@haskell.org

-- A copyright notice.
-- copyright:
category:           Data
extra-doc-files:    CHANGELOG.md, README.md
extra-source-files:
  assets/css/*.css
  assets/images/*.png
  test/golden/*.golden
  test/golden/*.md

tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.6 || ==9.8.3 || ==9.10.1 || ==9.12.1

library
  exposed-modules:
    Security.Advisories
    Security.Advisories.Convert.OSV
    Security.Advisories.Filesystem
    Security.Advisories.Generate.HTML
    Security.Advisories.Generate.Snapshot
    Security.Advisories.Generate.TH
    Security.Advisories.Git
    Security.Advisories.Format
    Security.Advisories.Parse
    Security.Advisories.Queries

  other-modules:
      Paths_hsec_tools
  autogen-modules:
      Paths_hsec_tools

  build-depends:
    , aeson                 >=2.0.1.0  && <3
    , atom-conduit          >=0.9      && <0.10
    , base                  >=4.14     && <5
    , bytestring            >=0.10     && <0.14
    , Cabal-syntax          >=3.8.1.0  && <3.15
    , commonmark            ^>=0.2.2
    , commonmark-pandoc     >=0.2      && <0.3
    , conduit               >=1.3      && <1.4
    , conduit-extra         >=1.3      && <1.4
    , containers            >=0.6      && <0.8
    , cvss                  >= 0.2     && < 0.3
    , data-default          >=0.7      && <0.8
    , directory             <2
    , extra                 >=1.7      && <1.9
    , filepath              >=1.4      && <1.6
    , hsec-core             >= 0.2.1.0 && <0.3
    , file-embed            >=0.0.13.0 && <0.0.17
    , lucid                 >=2.9.0    && < 3
    , mtl                   >=2.2      && <2.4
    , osv                   >=0.1      && <0.3
    , pandoc                >=2.0      && <3.8
    , pandoc-types          >=1.22     && <2
    , parsec                >=3        && <4
    , pretty                >=1.0      && <1.2
    , prettyprinter         >=1.7      && <1.8
    , process               >=1.6      && <1.7
    , refined               >=0.7      && <0.9
    , resourcet             >=1.2      && <1.4
    , text                  >=1.2      && <3
    , template-haskell      >=2.16.0.0 && <2.24
    , time                  >=1.9      && <1.15
    , toml-parser           >=2.0.0.0  && <2.1
    , uri-bytestring        >=0.3      && <0.5
    , xml-conduit           >=1.9      && <1.11
    , validation-selective  >=0.1      && <1

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

executable hsec-tools
  main-is:          Main.hs
  other-modules:    Command.Reserve
                    , Command.NextID
                    , Util

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson                 >=2.0.1.0  && <3
    , base                  >=4.14     && <5
    , bytestring            >=0.10     && <0.13
    , Cabal-syntax          >=3.8.1.0  && <3.15
    , filepath              >=1.4      && <1.6
    , hsec-core             >= 0.2.1.0 && <0.3
    , hsec-tools
    , optparse-applicative  >=0.17     && <0.19
    , text                  >=1.2      && <3
    , transformers
    , validation-selective  >=0.1      && <1

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  autogen-modules:
    Paths_hsec_tools
  other-modules:
    Paths_hsec_tools
    Spec.FormatSpec
  build-depends:
    , aeson-pretty   <2
    , base
    , Cabal-syntax
    , containers
    , cvss
    , directory
    , hedgehog       <2
    , hsec-core
    , hsec-tools
    , osv
    , pretty-simple  <5
    , prettyprinter
    , tasty          <2
    , tasty-golden   <2.4
    , tasty-hedgehog <2
    , text
    , time
    , toml-parser

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
