cabal-version:   3.0
name:            purl
version:         0.1.0.0
synopsis:        Support for purl (mostly universal package url).
description:
  Support for the purl specification: <https://github.com/package-url/purl-spec>

license:         BSD-3-Clause
author:          Gautier DI FOLCO
maintainer:      foss@difolco.dev
category:        Data
extra-doc-files: CHANGELOG.md
tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.6 || ==9.8.3 || ==9.10.1 || ==9.12.1

library
  exposed-modules:  Data.Purl
  build-depends:
    , base             >=4.14   && <5
    , aeson            >=2.0    && <2.3
    , case-insensitive             <1.3
    , containers       >=0.6    && <0.8
    , http-types       >=0.10.0 && <0.13
    , parsec           ==3.1.*
    , text             >=1.2    && <3

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    , base         <5
    , containers
    , purl
    , tasty        <1.6
    , tasty-hunit  <1.0
    , text

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
