cabal-version:   3.0
name:            test-a
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          mangoiv
maintainer:      mail@mangoiv.com
category:        Codec
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib

  -- hakyll depends on pandoc which has a security report
  build-depends:
    , base
    , hakyll

  hs-source-dirs:   src
  default-language: Haskell2010
